--- a/Lab3/Lab3_DLL/Lab3_DLL.vcxproj
+++ b/Lab3/Lab3_DLL/Lab3_DLL.vcxproj
@@ -133,6 +133,10 @@
       <EnableUAC>false</EnableUAC>
       <ModuleDefinitionFile>Lab3_DLL.def</ModuleDefinitionFile>
     </Link>
+    <PostBuildEvent>
+      <Command>
+      </Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
